feat(forgotPassword): customize user lookup criteria in forgot password flow
closes AM-7145